Src/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Pan Number</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>